--- a/translations/pageui/en.json
+++ b/translations/pageui/en.json
@@ -11,8 +11,20 @@
   "STATUS_MESSAGE_CONNECTING" : "Connecting board",
   "STATUS_MESSAGE_NOT_CONNECTED" : "No board connected",
   "STATUS_MESSAGE_CONNECTED" : "Connected board",
-  "BUTTON_LANG_ES" : "Spanish",
+  "BUTTON_LANG_ES" : "Español",
   "BUTTON_LANG_EN" : "English",
+  "BUTTON_CLEAR_BLOCKS" :"Clear blocks",
+  "CONFIRM_CLEAR_MSG" : "Do you really want to clear all blocks?",
+  "CAT_CONTROL" : "Control",
+  "CAT_LOGIC" : "Logic",
+  "CAT_MATH" : "Math",
+  "CAT_FIRSTMAKERS" : "Firstmakers",
+  "CAT_VARIABLES" : "Variables",
+  "CAT_FUNCTIONS" : "Functions",
+  "CAT_TEXT" : "Text",
+  "CAT_COLOR" : "Color",
+  "CAT_LISTS" : "Lists",
+
   
   "__DUMMY__" : "no trailing comma"
 }
