write digital pin on/ff

--- a/translations/pageui/es.json
+++ b/translations/pageui/es.json
@@ -25,6 +25,7 @@
   "CAT_COLOR" : "Color",
   "CAT_LISTS" : "Listas",
   "CAT_INTERNET" : "Internet",
+  "CAT_ARDUINO" : "Arduino",
 
   
   "__DUMMY__" : "no trailing comma"
