--- a/translations/pageui/en.json
+++ b/translations/pageui/en.json
@@ -15,6 +15,8 @@
   "BUTTON_LANG_ES" : "Español",
   "BUTTON_LANG_EN" : "English",
   "BUTTON_CLEAR_BLOCKS" :"Clear blocks",
+  "BUTTON_OPEN" :"Open",
+  "BUTTON_SAVE" :"Save as",
   "CONFIRM_CLEAR_MSG" : "Do you really want to clear all blocks?",
   "CAT_CONTROL" : "Control",
   "CAT_LOGIC" : "Logic",
