Add password reset & emails

--- a/translations/pageui/en.json
+++ b/translations/pageui/en.json
@@ -37,8 +37,38 @@
   "OPEN_SKETCH" : "Open",
   "SIGN_IN": "Sign In",
   "SIGN_OUT": "Sign Out",
+  "SIGN_UP": "Sign Up",
   "USER_SIGN_IN" : "User Sign In",
   "USER_SIGN_UP" : "User Sign Up",
+  "EMAIL_ADDRESS" : "Email address",
+  "PASSWORD" : "Password",
+  "NEW_REGISTRATION": "Register a new user",
+  "FORGOT_PASSWORD" : "Forgot my password",
+  "USERNAME": "Username (text without spaces)", 
+  "CANCEL": "Cancel",
+  "RESET_PASSWORD": "Reset password",
+  "MSG_EMAIL_SENT" : "An email was sent to {{email}} with a link to reset the password. This link will be valid for a short period of time.",
+  "MSG_EMAIL_ERROR":"There was an error resetting the password.  Are you sure that {{email}} is a registred user?.",
+  "ERROR_SIGNIN": "Error signing in",
+  "ERROR_SIGNIN_INVALID_EMAIL" : "No user registered with this email",
+  "ERROR_SIGNIN_INVALID_PASSWORD" :  "Wrong password",
+  "ERROR_SIGNIN_SAVE_TOKEN" : "Error creating persistent authentication",
+  "ERROR_SIGNIN_NO_EMAIL_PASSWORD" :"Must provide an email and password to sign in",
+  "MSG_REGISTRATION_INFO" : "To register a new user you must provide a valid email, password and username.",
+  "MSG_FORGOT_PASSWORD_INFO" : "To recover your password, an email with instructions will be sent to the provided email.",
+
+  "ERROR_FORGOT_PASSWORD_REQUEST" :   "Error, could not process the password recovery",
+  "ERROR_FORGOT_PASSWORD_CHECKING" :   "Error checking id the email is valid",
+  "ERROR_FORGOT_PASSWORD_NON_USER" :   "Error, there is no user with the provided email" , 
+  "ERROR_FORGOT_PASSWORD_NO_EMAIL" :   "No email was provided" ,
+ 
+  "ERROR_SIGNUP" : "Error signing up",
+  "ERROR_SIGNUP_EMAIL_EXISTS" : "Error: There is already a user with this email",
+  "ERROR_SIGNUP_USERNAME_EXISTS" : "Error: this username has been used by another user",
+  "ERROR_SIGNUP_USER_VALIDATION_FAILED" : "Error validating the user",
+  "ERROR_SIGNUP_USER_SAVE_ERROR" : "Error saving the new user",
+  "ERROR_SIGNUP_LACK_EMAIL_USERNAME_PASSWORD" : "Must provide a valid email, username and password",
+  "ERROR_SIGNUP_FAILED_ACTIVATION_EMAIL" : "Error: Failed to send activation email",
 
   "__DUMMY__" : "no trailing comma"
 }
