Blocks for Firstmakers Board version 2

--- a/translations/pageui/es.json
+++ b/translations/pageui/es.json
@@ -22,6 +22,7 @@
   "CAT_LOGIC" : "Lógica",
   "CAT_MATH" : "Matemática",
   "CAT_FIRSTMAKERS" : "Firstmakers",
+  "CAT_FIRSTMAKERS_2" : "Firstmakers v2",
   "CAT_VARIABLES" : "Variables",
   "CAT_FUNCTIONS" : "Funciones",
   "CAT_TEXT" : "Texto",
