--- a/translations/pageui/en.json
+++ b/translations/pageui/en.json
@@ -22,6 +22,7 @@
   "CAT_LOGIC" : "Logic",
   "CAT_MATH" : "Math",
   "CAT_FIRSTMAKERS" : "Firstmakers",
+  "CAT_FIRSTMAKERS_2" : "Firstmakers v2",
   "CAT_VARIABLES" : "Variables",
   "CAT_FUNCTIONS" : "Functions",
   "CAT_TEXT" : "Text",
