now can connect BT devices, added list of devices

--- a/translations/pageui/es.json
+++ b/translations/pageui/es.json
@@ -73,7 +73,7 @@
   "DEVICE_NAME" : "Nombre de dispositivo:",
   "FILE" : "Archivo",
   "LANGUAGE" : "Idioma",
-
+  "DEVICES": "Dispositivos",
 
   "__DUMMY__" : "no trailing comma"
 }
