--- a/translations/pageui/en.json
+++ b/translations/pageui/en.json
@@ -74,7 +74,6 @@
   "DEVICE_NAME" : "Device name:",
   "FILE" : "File",
   "LANGUAGE" : "Language",
-
-
+  "DEVICES": "Devices",
   "__DUMMY__" : "no trailing comma"
 }
